samples/_failures_safe/1761351958_3c9405_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3efef88.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_e3efef88.c:167:5: error: expected declaration or statement at end of input
  167 |     switch (type) {
      |     ^~~~~~
./samples/SAFE/__tmp_e3efef88.c:167:5: error: expected declaration or statement at end of input
